stylesheets/style.scss
$smmd: 900px;

body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  color: white;
  overflow-x: hidden;
}

.container {
  width: 100%;
  height: 100%;
  background-color: rgb(4, 3, 3);
  scroll-snap-type: y mandatory;
  overflow-y: scroll;
  overflow-x: hidden;
  scroll-behavior: smooth;
  
  section {
    z-index: -1;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: calc(100vh - 120px);
    scroll-snap-align: start;
    scroll-margin-top: 60px;
    @media only screen and (max-width: $smmd) {
      display: flex;
      flex-direction: column;
    }


    &:nth-of-type(1) {
      background-image: url("../images/range.png");
      background-size: cover;
      background-repeat: no-repeat;
      margin-top: 180px;
      display: flex;
      justify-content: flex-start;
      flex-direction: column;
      height: calc(100vh);
      
      ;

    }

    &:nth-of-type(2) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(3) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(4) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(5) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(6) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(7) {
      background-color: rgb(4, 3, 3)
    }

    &:nth-of-type(8) {
      background-color: rgb(4, 3, 3);
      margin: auto;
    }
  }
}

a {
  color: rgb(161, 51, 51);
  margin: auto;
  text-decoration: none;
}

#navigation {
  width: 100vw;
  background-color: rgb(4, 3, 3);
  display: flex;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  top: 0;
  height: 60px;
  z-index: 1;
  color: rgb(161, 51, 51);
  letter-spacing: 2px;
  font-weight: 600;

  @media only screen and (max-width: $smmd) {
    display: none;
  }
}


#open {
  display: none;
  @media only screen and (max-width: $smmd) {
    display: flex;
    position: absolute;
    top: 20px;
    right: 35px;
    font-size: 25px;
    color: rgb(161, 51, 51)
  }
}


#close {
  font-size: 30px;
  display: none;
  position: absolute;
  top: 10px;
  right: 15px;
  z-index: 3;
  color: rgb(161, 51, 51);

  @media only screen and (min-width: $smmd) {
    opacity: 0;
  }
}

#mobile-nav {
  text-align: center;
  font-weight: 600;
  letter-spacing: 2px;
  position: absolute;
  display: none;
  flex-direction: column;
  width: 50%;
  height: 100vh;
  background: rgba(220, 220, 220, 0.938);
  opacity: 0;
  z-index: 2;
  border-left: 2px solid rgb(161, 51, 51);

}

#mobile-nav.responsive {
  right: 0;
  transform: translateX(0);
  opacity: 1;

  @media only screen and (min-width: $smmd) {
    opacity: 0;
  }
}
#hamburger {
  width: 100vw;
  height: 60px;
  background-color: rgb(4, 3, 3);
  position: fixed;
  top: 0;
  z-index: 1;
}

#navigation > div {
  width: 25%;
  text-align: center;
}

.dropdown {
  position: relative;
}

.dropdown-content {
  display: none;
  position: absolute;
  left: 25%;
  background-color: rgb(4, 3, 3);
  width: 50%;
  border: 2px solid rgb(161, 51, 51);
  // z-index: 1;
}

.dropdown:hover .dropdown-content {
  display: flex;
  flex-direction: column;
}

button {
  font-size: 12px;
  letter-spacing: .5px;
}

button > i {
  padding-left: 10px;
  font-size: 1rem;
  color: black;
}

h3,
h1 {
  text-align: center;
  letter-spacing: 5px;
}
h1 {
  @media only screen and (max-width: $smmd) {
    letter-spacing: 0;
  }
}


h4 {
  color: black;
  margin: 5px 0 0 0;
  padding-bottom: 0;
  letter-spacing: 5px;

}

hr {
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: rgb(161, 51, 51)
}

#landing {
  width: 100%;
  margin-top: 15px;
  display: flex;
  justify-content: center;

}

#landing > button {
  margin: 5px;
}

.project {
  display: flex;
}

.info {
  padding: 10px;
  box-shadow: 0 4px 11px 1px rgba(0, 0, 0, 0.459);
  width: 50%;
  height: 80%;
  border-radius: 30px;
  background: rgba(27, 27, 27, 0.444);
  margin-left: -4%;
  display: flex;
  justify-content: center;
  align-items: center;
  @media only screen and (max-width: $smmd) {
    width: 80%;
    height: auto;
    margin-bottom: 4%; 
    margin-left: 0;
    
}
}

div > img {
  padding: 0;
}

i > span {
  font-size: 1rem;
}

#skills > div {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: center;
}

.skill > p {
  text-align: center;
  font-size: 1rem;
  font-weight: 700;
  font-family: 'Roboto', sans-serif;
  margin-top: 30px;
  color: rgb(200, 200, 200)
}

.icon {
  position: relative;
  font-size: 3rem;
  margin: 15px;
}


#me {
  margin-top: 25px;
  width: 50%;
  border-bottom: 2px solid rgb(161, 51, 51);
    @media only screen and (max-width: $smmd) {
      width: 80%;
      margin-top: 40px
  }
}

.preview {
  width: 50%;
  margin-right: -4%;
  z-Index: 1;
  @media only screen and (max-width: $smmd) {
    width: 80%;
    margin-top: 4%;
    margin-right: 0;

  }
  
}

.preview > div {
  width: 80%;
  display: flex;
  justify-content: space-evenly;
  margin-bottom: 5px;
  @media only screen and (max-width: $smmd) {
    width: 100%;
    display: flex;

  }
}
.preview > div > button {
  @media only screen and (min-width: $smmd) {
    width: 50%;
    margin-right: -15%;

  }
}

.image {
  width: 100%;
  height: 100%;
  display: none;

}

// .image > .laptop {
//   width: 70%;
// }

// .image > .phone {
//   width: 30%;
// }

// .image > div > #res {
//   margin-left: -225px;
//   margin-bottom: 19px;
// }

// .image > div > #nores {
//   margin-left: -740px;
//   margin-bottom: 50px;

// }

.left {
  transform: translateX(-50%);

}

.right {
  transform: translateX(50%);

}

.left,
.right {
  transition: opacity 250ms ease-in, transform 400ms ease-in;
  opacity: 0
}

.left.appear,
.right.appear {
  transform: translateX(0);
  opacity: 1;
}


.title,
.stack,
p {
  width: 80%;
  margin: 0 auto;
}

p {
  font-family: 'Times New Roman', Times, serif;
  font-size: 1rem;
  width: 100%;
  @media only screen and (max-width: $smmd) {
    font-size: 14px;
  }
}

.link {
  margin: 5px;
  font-size: 2rem
}

.stack {
  text-align: center;
  padding-top: 10px;
}

.desc {
  width: 65%;
  height: 65%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 15%;
  @media only screen and (max-width: $smmd) {
    width: 80%;
    height: 100%;
    margin: auto;
  }
}

.title {
  margin-bottom: 20px;
  text-align: center;
}

.title > a {
  font-size: 3rem;
  color: #04AA6D;
  letter-spacing: 10px;
  @media only screen and (max-width: $smmd) {
    font-size: 2rem;
  }
}

.title > a:hover {
  color: rgb(202, 62, 71);
}

.title > h1 {
  font-size: 2rem;
  letter-spacing: 5px;
  @media only screen and (max-width: $smmd) {
    font-size: 1.5rem;
  }
}

.tech {
  font-size: 3rem;
  margin: 10px;
  @media only screen and (max-width: $smmd) {
    font-size: 2rem;
  }
}


input[type=text],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: none;
  border-bottom: 5px solid rgb(202, 62, 71);
  background-color: rgb(74, 73, 73);
  resize: vertical;
  color: azure;
  font-size: 1rem;
}

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
  color: whitesmoke;
}

input[type=submit],
button {
  background-color: #04AA6D;
  color: rgb(0, 0, 0);
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
  font-weight: 600;
}

input[type=submit]:hover,
button:hover {
  background-color: rgb(202, 62, 71);
}

.form {
  border-radius: 5px;
  background-color: rgb(43, 43, 43);
  padding: 20px;
  width: 50%;
  @media only screen and (max-width: $smmd) {
    width: 80%;
    margin-bottom: 120px;
  }
}

.col-25 {
  float: left;
  width: 15%;
  margin-top: 6px;
}

.col-75 {
  float: left;
  width: 75%;
  margin-top: 6px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

::-webkit-scrollbar {
  width: 20px;
  @media only screen and (max-width: $smmd) {
    width: 0;
  }
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(4, 3, 3, 0.051);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(161, 51, 51);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(209, 209, 209);
}

